feat: add OpenAPI support, fix business logic, and add extra endpoints
- Integrated springdoc-openapi UI for Swagger documentation
- Corrected order creation logic (ticket booking and event ticket count updates)
- Added new REST endpoints for order and ticket management